--- a/Client/public/styling/_btn.css
+++ b/Client/public/styling/_btn.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 4;
 
     transition: background-color 100ms ease-in-out;
 }
