--- a/Client/public/styling/_main.css
+++ b/Client/public/styling/_main.css
@@ -9,7 +9,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    z-index: -2;
+    z-index: 2;
 }
 
 .container {
